--- a/carrito.html
+++ b/carrito.html
@@ -19,11 +19,40 @@
             </ul>
         </nav>
     </header>
-    <p>Tienda de componentes de PC</p>
-    <section class="ProductosVenta">
-        <div>
-            <div id="misprods" class="row">
+    <section class="carrito">
+        <h2>Tu carrito</h2>
+        <p>
+            Estos son los productos que se encuentran en tu carrito 
+        </p>
+        <div class="tusProductos">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                    </tr>
+                </thead>
+                <tbody id="tablabody">
+    
+                </tbody>
+            </table>
+        </div>
+        <div class="datos">
+            <div>
+                <h3>
+                    Cantidad de productos:
+                </h3>
+                <h4>
+                    Tu direccion:  
+                </h4>
+                <h5>
+                    Precio total:
+                </h5>
             </div>
+        </div>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button class="btn btn-primary" type="button">Pagar</button>
         </div>
     </section>
     <footer class="pie">
@@ -39,6 +68,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="productos.js"></script>
     <script src="gamaTienda.js"></script>
 </body>
 </html>
