--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             <div id="misprods" class="row">
             </div>
         </div>
+        <div class="tusProductos">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                    </tr>
+                </thead>
+                <tbody id="tablabody">
+    
+                </tbody>
+            </table>
+        </div>
         
         <h4 id="total">Total a pagar $:</h4>
     </section>
