--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>ID</th>
+                        <th>tus Productos</th>
                         <th>Nombre</th>
                         <th>Precio</th>
                     </tr>
@@ -45,17 +45,7 @@
         
         <h4 id="total">Total a pagar $:</h4>
     </section>
-    <footer class="pie">
-        <div>
-            <h3>Información de contacto</h3>
-            <ul>
-                <li>Teléfono: 123-123-123</li>
-                <li>Email: ventas@Gama.com</li>
-                <p>colombia</p>
-            </ul>
-        </div>
-        <p>Copyright © 2023 Gama.com</p>
-    </footer>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
